# routes/admin/generate/routes.go
@@ -1,17 +1,0 @@
-// Code generated by goctl. DO NOT EDIT.
-package generate
-
-import (
-	"go-admin-template/handler/admin/generate"
-	"go-admin-template/middleware"
-
-	"github.com/gin-gonic/gin"
-)
-
-func RegisterAdminGenerateRoute(e *gin.Engine) {
-	g := e.Group("")
-	g.Use(middleware.JwtMiddleware)
-	g.GET("/generate", generate.ListHandle)
-	g.POST("/generate", generate.GenerateHandle)
-
-}
